[gd_scene load_steps=2 format=3 uid="uid://c8qvt5qjkuv7qw"]

[ext_resource type="Script" path="res://scripts/ui/achievement/achievement_panel.gd" id="1_yvmqe"]

[node name="AchievementPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvmqe")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.9)

[node name="TitlePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="TitlePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -15.0
offset_right = 100.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "成就"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CategoryPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 60.0
offset_bottom = 110.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CategoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="AllButton" type="Button" parent="CategoryPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "全部"

[node name="GameplayButton" type="Button" parent="CategoryPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "游戏玩法"

[node name="CollectionButton" type="Button" parent="CategoryPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "收集"

[node name="ChallengeButton" type="Button" parent="CategoryPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "挑战"

[node name="HiddenButton" type="Button" parent="CategoryPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "隐藏"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 110.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="AchievementContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="ProgressPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="ProgressBar" type="ProgressBar" parent="ProgressPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -10.0
offset_right = 200.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
value = 50.0

[node name="ProgressLabel" type="Label" parent="ProgressPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "已解锁: 5/10 (50%)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
text = "X"
